fix(website): Fix contrast of code snippets in light mode #8440

--- a/website/styles.css
+++ b/website/styles.css
@@ -10,15 +10,22 @@ body {
     fixed 10px 10px / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0);
 }
 
-/* Overriding the default colour schemas */
-.light .nx-bg-primary-700\/5 {
-  background-color: #0a4b6c !important;
+/* Overriding the default colour schemas for light mode*/
+.light [data-language], .light .nextra-code-block>pre {
+  background-color: #0a4b6c  !important;
+}
+.light .nextra-code-block>div {
+  background-color: #0a4b6c   !important;
+  color: aliceblue !important;
+}
+.light button[title="Copy code"], button[title="Toggle word wrap"] {
+    color: aliceblue !important;
+}
+.light button[title="Copy code"]:hover, button[title="Toggle word wrap"]:hover  {
+  color: #00fd48dc !important;
 }
 
-.nx-text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgba(232, 239, 245, var(--tw-text-opacity));
-}
+
 
 .dark body {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #111 300px),
